--- a/main.html
+++ b/main.html
@@ -57,54 +57,54 @@
         <div class="innerBox">
             <div class="all"> <a href=""> ALL </a>
                 <div class="all-content">
-                    <div>
+                    <div class="warrap">
                         <div class="top"> TOP</div>
                         <div class="top"> BOTTOM</div>
                         <div class="top"> OUTER</div>
                         <div class="top"> TOP</div>
                         <div class="top"> ACC</div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="warrap">
+                        <div class="down">
                             <a href="#">티셔츠</a>
                             <a href="#">반팔티</a>
                             <a href="#">블라우스/남방</a>
                         </div>
-                        <div>
+                        <div class="down">
                             <a href="#">긴바지</a>
                             <a href="#">반바지</a>
                             <a href="#">치마</a>
                             <a href="#">레깅스</a>
                             <a href="#">멜빵</a>
                         </div>
-                        <div>
+                        <div class="down">
                             <a href="#">가디건</a>
                             <a href="#">점퍼/야상</a>
                             <a href="#">자켓/코트</a>
                         </div>
-                        <div>
+                        <div class="down">
                             <a href="#">치마</a>
                             <a href="#">원피스</a>
                         </div>
-                        <div>
+                        <div class="down">
                             <a href="#">모자</a>
                             <a href="#">양말</a>
                         </div>
                     </div>
-                    <div>
-                        <div> SALE</div>
-                        <div> BEST 50</div>
-                        <div> CUMMUNITY</div>
-                        <div> WHIT US</div>
+                    <div class="warrap">
+                        <div class="top"> SALE</div>
+                        <div class="top"> BEST 50</div>
+                        <div class="top"> CUMMUNITY</div>
+                        <div class="top"> WHIT US</div>
                     </div>
-                    <div>
-                        <div>
+                    <div class="warrap2">
+                        <div class="down">
                             <a href="#">NOTICE</a>
                             <a href="#">Q & A</a>
                             <a href="#">REVIEW</a>
                             <a href="#">MODEL</a>
                         </div>
-                        <div>
+                        <div class="down">
                             <a href="#">COMPANY</a>
                             <a href="#">AGREEMENT</a>
                             <a href="#">PRAIVACY POLICY</a>
