26일 업로드(지희)

--- a/main.html
+++ b/main.html
@@ -181,17 +181,72 @@
             <div class="ItemExplanation1">
                 <div class="ItemExplanationName">[무배]BEST 맨투맨 모음(기모안감 선택가능)</div>
                 <div class="ItemExplanationPrice">판매가 : 14,900 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
+                <div class="hiddenMenu">
+                    <img class="hidden1" src="mainImage/hidden1.png">
+                    <div class="detail"> <img src="mainImage/hiddenOption.png"> 이 상품의 옵션
+                        <hr>
+                        상품명: 1.미니래빗 / 색상:블랙 (+2,000 won)
+                        <hr>
+                        상품명: 1.미니래빗 / 색상:백염 (+2,000 won)
+                        <hr>
+                        상품명: 1.미니래빗 / 색상:그레이 (+2,000 won)
+                        <hr>
+                        상품명: 1.미니래빗 / 색상:오트밀 (+2,000 won)
+                        <hr>
+                        상품명: 1.미니래빗 / 색상:블랙(기모) (+2,000 won)
+                    </div>
+                    <img class="hidden2" src="mainImage/hidden2.png">
+                    <img class="hidden3" src="mainImage/hidden3.png">
+                    <img class="hidden4" src="mainImage/hidden4.png">
+                </div>
             </div>
             <div class="ItemExplanation2">
                 <div class="ItemExplanationName">[무배]초코 체크 라운드 니트</div>
                 <div class="ItemExplanationPrice">판매가 : 19,500 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
+                <div class="hiddenMenu">
+                    <img class="hidden1" src="mainImage/hidden1.png">
+                    <div class="detail"> <img src="mainImage/hiddenOption.png"> 이 상품의 옵션
+                        <hr>
+                        색상 : 블랙 / 사이즈 : FREE
+                        <hr>
+                        색상 : 파랑 / 사이즈 : FREE
+                        <hr>
+                        색상 : 연두 / 사이즈 : FREE
+                        <hr>
+                        색상 : 브라운 / 사이즈 : FREE
+                    </div>
+                    <img class="hidden2" src="mainImage/hidden2.png">
+                    <img class="hidden3" src="mainImage/hidden3.png">
+                    <img class="hidden4" src="mainImage/hidden4.png">
+                </div>
             </div>
             <div class="ItemExplanation3">
                 <div class="ItemExplanationName">[기모/오버핏] 가브리엘 반집업 맨투맨</div>
                 <div class="ItemExplanationPrice">판매가 : 24,500 won</div>
-                <div class="ItemExplanationPoint">200원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">200원 (1%)</div>
+                <div class="hiddenMenu">
+                    <img class="hidden1" src="mainImage/hidden1.png">
+                    <div class="detail"> <img src="mainImage/hiddenOption.png"> 이 상품의 옵션
+                        <hr>
+                        색상 : 백메란지(기모O) / 사이즈 : FREE
+                        <hr>
+                        색상 : 차콜(기모O) / 사이즈 : FREE
+                        <hr>
+                        색상 : 블랙(기모O) / 사이즈 : FREE
+                        <hr>
+                        색상 : 백메란지(기모X) / 사이즈 : FREE
+                        <hr>
+                        색상 : 차콜(기모X) / 사이즈 : FREE
+                        <hr>
+                        색상 : 블랙(기모X) / 사이즈 : FREE
+                        
+                    </div>
+                    <img class="hidden2" src="mainImage/hidden2.png">
+                    <img class="hidden3" src="mainImage/hidden3.png">
+                    <img class="hidden4" src="mainImage/hidden4.png">
+                </div>
             </div>
         </div>
         <div class="bestItemImgBox2">
@@ -203,17 +258,17 @@
             <div class="ItemExplanation4">
                 <div class="ItemExplanationName">[기모/아방핏] 오브하트 오버핏 맨투맨</div>
                 <div class="ItemExplanationPrice">판매가 : 15,500 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
             </div>
             <div class="ItemExplanation5">
                 <div class="ItemExplanationName">[기모선택가능/캐주얼] 2줄 트레이닝 팬츠</div>
                 <div class="ItemExplanationPrice">판매가 : 14,300 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
             </div>
             <div class="ItemExplanation6">
                 <div class="ItemExplanationName">[무배]심플 오버핏 후드집업[아방핏]</div>
                 <div class="ItemExplanationPrice">판매가 : 23,200 won</div>
-                <div class="ItemExplanationPoint">200원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">200원 (1%)</div>
             </div>
         </div>
     </div>    
@@ -232,17 +287,17 @@
             <div class="ItemExplanation1">
                 <div class="ItemExplanationName">[봄신상] 10컬러 무지 셔츠, 남방 </div>
                 <div class="ItemExplanationPrice">판매가 : 18,900 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
             </div>
             <div class="ItemExplanation2">
                 <div class="ItemExplanationName">[봄신상]시티 배색 크롭 자켓</div>
                 <div class="ItemExplanationPrice">판매가 : 49,500 won</div>
-                <div class="ItemExplanationPoint">400원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">400원 (1%)</div>
             </div>
             <div class="ItemExplanation3">
                 <div class="ItemExplanationName">[봄신상]시즈데이 반팔티</div>
                 <div class="ItemExplanationPrice">판매가 : 10,500 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
             </div>
         </div>
         <div class="newItemImgBox2">
@@ -254,17 +309,17 @@
             <div class="ItemExplanation4">
                 <div class="ItemExplanationName">[봄신상] 바스락 바람막이 아노락 후드티</div>
                 <div class="ItemExplanationPrice">판매가 : 19,900 won</div>
-                <div class="ItemExplanationPoint">100원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
             </div>
             <div class="ItemExplanation5">
                 <div class="ItemExplanationName">[봄신상] 웰컴 곰돌이 후집업</div>
                 <div class="ItemExplanationPrice">판매가 : 21,500 won</div>
-                <div class="ItemExplanationPoint">200원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">200원 (1%)</div>
             </div>
             <div class="ItemExplanation6">
                 <div class="ItemExplanationName">[봄신상] 베이직 롱 바바리 코트 자켓</div>
                 <div class="ItemExplanationPrice">판매가 : 40,900 won</div>
-                <div class="ItemExplanationPoint">400원 (1%)</div>
+                <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">400원 (1%)</div>
             </div>
         </div>
     </div> 
@@ -321,4 +376,5 @@
 <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
 <script src="main.js"></script>
 <script src="mainImg.js"></script>
+<script src="mainHidden.js"></script>
 </html>
