--- a/11.html
+++ b/11.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="111.css" />
 </head>
 <body>
-    <div class="slide slide_wrap">
-        <div class="slide_item item1"><img src="/mainImage/cutmain1.jpg"></div>
-        <div class="slide_item item2"><img src="/mainImage/cutmain2.jpg"></div>
-        <div class="slide_item item3"><img src="/mainImage/cutmain3.jpg"></div>
-        <div class="slide_item item4"><img src="/mainImage/cutmain4.jpg"></div>
-        <div class="slide_prev_button slide_button">◀</div>
-        <div class="slide_next_button slide_button">▶</div>
-        <ul class="slide_pagination"></ul>
-    </div>
-        <script src="./1111.js"></script>
+    <img class="hidden1" src="mainImage/hidden1.png"></img>
+    <div class="detail" >디테일</div>
+    밑에있어유
 
+  
+    
+</body>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+    <script src="1111.js"></script>
+    
 
 </html>
