27일 2시 업로드(지희)

--- a/11.html
+++ b/11.html
@@ -5,15 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="111.css" />
+    <link rel="stylesheet" href="mainheader.css" />
+    <link rel="stylesheet" href="mainImg.css" />
+    <link rel="stylesheet" href="mainItem.css" />
+    <link rel="stylesheet" href="mainInfo.css" />
+    <link rel="stylesheet" href="mainFloat.css" />
+
 </head>
 <body>
-    <img class="hidden1" src="mainImage/hidden1.png"></img>
-    <div class="detail" >디테일</div>
-    밑에있어유
-
-  
-    
+    <div class="bestItemExplanation1">
+        <div class="ItemExplanation1">
+            <div class="ItemExplanationName">[무배]BEST 맨투맨 모음(기모안감 선택가능)</div>
+            <div class="ItemExplanationPrice">판매가 : 14,900 won</div>
+            <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
+            <div class="hiddenMenu">
+        <img class="hidden1" src="mainImage/hidden1.png">
+        <div class="detail"> <img src="mainImage/hiddenOption.png"> 이 상품의 옵션
+            <hr>
+            상품명: 1.미니래빗 / 색상:블랙 (+2,000 won)
+            <hr>
+            상품명: 1.미니래빗 / 색상:백염 (+2,000 won)
+            <hr>
+            상품명: 1.미니래빗 / 색상:그레이 (+2,000 won)
+            <hr>
+            상품명: 1.미니래빗 / 색상:오트밀 (+2,000 won)
+            <hr>
+            상품명: 1.미니래빗 / 색상:블랙(기모) (+2,000 won)
+        </div>
+        <img class="hidden2" src="mainImage/hidden2.png">
+        <img class="hidden3" src="mainImage/hidden3.png">
+        <img class="hidden4" src="mainImage/hidden4.png">
+    </div>
+</div>
+<div class="ItemExplanation2">
+    <div class="ItemExplanationName">[무배]초코 체크 라운드 니트</div>
+    <div class="ItemExplanationPrice">판매가 : 19,500 won</div>
+    <div class="ItemExplanationPoint"><img src="mainImage/cumulative.png">100원 (1%)</div>
+    <div class="hiddenMenu">
+        <img class="hidden1-2" src="mainImage/hidden1.png">
+        <div class="detail2"> <img src="mainImage/hiddenOption.png"> 이 상품의 옵션
+            <hr>
+            색상 : 블랙 / 사이즈 : FREE
+            <hr>
+            색상 : 파랑 / 사이즈 : FREE
+            <hr>
+            색상 : 연두 / 사이즈 : FREE
+            <hr>
+            색상 : 브라운 / 사이즈 : FREE
+        </div>
+        <img class="hidden2" src="mainImage/hidden2.png">
+        <img class="hidden3" src="mainImage/hidden3.png">
+        <img class="hidden4" src="mainImage/hidden4.png">
 </body>
     <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
     <script src="1111.js"></script>
