--- a/main.html
+++ b/main.html
@@ -197,6 +197,14 @@
                         상품명: 1.미니래빗 / 색상:블랙(기모) (+2,000 won)
                     </div>
                     <img class="hidden2" src="mainImage/hidden2.png">
+                    <div class="popUp">
+                        <div class="popUp-Head">
+                            <div class="popUp-Head-Text"> 옵션 선택</div> 
+                            <div class="popUp-CloseBnt">x</div>
+                        </div>
+                        
+                    구매창이 왜 여기서 나와...?
+                    </div>
                     <img class="hidden3" src="mainImage/hidden3.png">
                     <img class="hidden4" src="mainImage/hidden4.png">
                 </div>
