--- a/q&a.html
+++ b/q&a.html
@@ -7,7 +7,7 @@
     <title>♡핫텐♡</title>
     <link rel="stylesheet" href="mainheader.css" />
     <link rel="stylesheet" href="mainInfo.css" />
-    <link rel="stylesheet" href="new.css" />
+    <link rel="stylesheet" href="q&a.css" />
     <link rel="stylesheet" href="mainFloat.css" />
 </head>
 <body>
