--- a/noEmptybasket.html
+++ b/noEmptybasket.html
@@ -22,6 +22,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
       rel="stylesheet"
     />
+
+    <!--웹페이지 로고-->
+    <link rel="shortcut icon" href="../img/titleLogo.png" />
   </head>
   <body>
     <div id="header">
@@ -204,7 +207,9 @@
                           class="down"
                         />
                       </a>
-                      <a href="#" class="change_button">변경</a>
+                      <a href="#" class="change_button" id="change_button"
+                        >변경</a
+                      >
                     </td>
                     <td class="mileage_point">
                       <div>100원</div>
@@ -219,11 +224,15 @@
                       </div>
                     </td>
                     <td class="product_button">
-                      <a href="#" class="small_button" id="small_button_order"
+                      <a href="#" class="small_button_order" id="small_button1"
                         >주문하기</a
                       >
-                      <a href="#" class="small_button">관심상품등록</a>
-                      <a href="#" class="small_button">삭제</a>
+                      <a href="#" class="small_button" id="small_button2"
+                        >관심상품등록</a
+                      >
+                      <a href="#" class="small_button" id="small_button3"
+                        >삭제</a
+                      >
                     </td>
                   </tr>
                 </tbody>
@@ -263,13 +272,17 @@
         </div>
 
         <!--선택상품 제어-->
-        <div class="select-order">
+        <div class="select-order" id="basket_small_button">
           <div class="select-order-left">
-            <a href="#" class="remove_button">삭제하기</a>
-            <a href="#" class="select_button">관심상품등록</a>
+            <a href="#" class="remove_button" id="remove_button">삭제하기</a>
+            <a href="#" class="select_button" id="select_button"
+              >관심상품등록</a
+            >
           </div>
           <div class="select-order-right">
-            <a href="#" class="removeAll_button">장바구니비우기</a>
+            <a href="#" class="removeAll_button" id="removeAll_button"
+              >장바구니비우기</a
+            >
           </div>
         </div>
 
@@ -314,9 +327,11 @@
 
         <!--주문버튼 박스-->
         <div class="button">
-          <div class="all-buy">전체상품주문</div>
-          <div class="select-buy">선택상품주문</div>
-          <div class="shopping-continue">쇼핑계속하기</div>
+          <div class="all-buy" id="all-buy">전체상품주문</div>
+          <div class="select-buy" id="select-buy">선택상품주문</div>
+          <div class="shopping-continue" id="shopping-continue">
+            쇼핑계속하기
+          </div>
         </div>
 
         <!--이용안내 박스-->
@@ -378,4 +393,5 @@
       </div>
     </div>
   </body>
+  <script src="./basketButton.js"></script>
 </html>
