--- a/orderList.html
+++ b/orderList.html
@@ -21,6 +21,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
       rel="stylesheet"
     />
+
+    <!--웹페이지 로고-->
+    <link rel="shortcut icon" href="../img/titleLogo.png" />
   </head>
   <body>
     <div id="header">
@@ -50,7 +53,6 @@
       />
       <div class="search">
         <input type="text" style="height: 20px" />
-        <!--귀찮아서 여기다가 스타일만들어줌 ㅇㅅㅇ;;-->
         <img src="mainImage/searchImg.PNG" class="searchImg" />
         <div class="searchImg"></div>
       </div>
