--- a/basket.html
+++ b/basket.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
       rel="stylesheet"
     />
+    <!--웹페이지 로고-->
+    <link rel="shortcut icon" href="../img/titleLogo.png" />
   </head>
   <body>
     <div id="header">
@@ -44,10 +46,8 @@
     </div>
 
     <div id="logo">
-      <img
-        src="https://app-storage-edge-003.cafe24.com/bannermanage2/hot1000/2022/07/18/fc7318f524f49219fd84f4cc1cbe5607.png"
-        class="logoimg"
-      />
+      <img src="../img/coolTenLogo.png" class="logoimg" />
+      <!--원본이미지:https://app-storage-edge-003.cafe24.com/bannermanage2/hot1000/2022/07/18/fc7318f524f49219fd84f4cc1cbe5607.png-->
       <div class="search">
         <input type="text" style="height: 20px" />
         <!--귀찮아서 여기다가 스타일만들어줌 ㅇㅅㅇ;;-->
@@ -98,6 +98,7 @@
             <h2>CART</h2>
           </div>
         </div>
+
         <!--회원정보박스-->
         <div class="info-box">
           <div class="information">
@@ -142,9 +143,11 @@
         <!--주문버튼 박스-->
         <!--버튼에 마우스 올리면 색상 바뀌는거 구현X-->
         <div class="button">
-          <div class="all-buy">전체상품주문</div>
-          <div class="select-buy">선택상품주문</div>
-          <div class="shopping-continue">쇼핑계속하기</div>
+          <div class="all-buy" id="all-buy">전체상품주문</div>
+          <div class="select-buy" id="select-buy">선택상품주문</div>
+          <div class="shopping-continue" id="shopping-continue">
+            쇼핑계속하기
+          </div>
         </div>
 
         <!--이용안내 박스-->
@@ -206,4 +209,5 @@
       </div>
     </div>
   </body>
+  <script src="./basketButton.js"></script>
 </html>
