--- a/basket/noEmptybasket.html
+++ b/basket/noEmptybasket.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./basketTab.css" />
     <link rel="stylesheet" href="./basketButton.css" />
     <link rel="stylesheet" href="./basketHelp.css" />
+    <link rel="stylesheet" href="../mainheader.css" />
     <link rel="stylesheet" href="./ifnoEmpty.css" />
-    <link rel="stylesheet" href="./mainheader.css" />
 
     <!--폰트-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,7 @@
     />
 
     <!--웹페이지 로고-->
-    <link rel="shortcut icon" href="../img/titleLogo.png" />
+    <link rel="shortcut icon" href="../logo/titleLogo.png" />
   </head>
   <body>
     <div id="header">
@@ -48,14 +48,10 @@
     </div>
 
     <div id="logo">
-      <img
-        src="https://app-storage-edge-003.cafe24.com/bannermanage2/hot1000/2022/07/18/fc7318f524f49219fd84f4cc1cbe5607.png"
-        class="logoimg"
-      />
+      <img src="../logo/coolTenLogo.png" class="logoimg" />
       <div class="search">
         <input type="text" style="height: 20px" />
-        <!--귀찮아서 여기다가 스타일만들어줌 ㅇㅅㅇ;;-->
-        <img src="mainImage/searchImg.PNG" class="searchImg" />
+        <img src="../mainImage/searchImg.PNG" class="searchImg" />
         <div class="searchImg"></div>
       </div>
     </div>
