--- a/orderList/orderList.html
+++ b/orderList/orderList.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./orderListPeriod.css" />
     <link rel="stylesheet" href="./orderListInfo.css" />
     <link rel="stylesheet" href="./orderListPageHistory.css" />
-    <link rel="stylesheet" href="./mainheader.css" />
+    <link rel="stylesheet" href="../mainheader.css" />
 
     <!--폰트-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,7 +23,7 @@
     />
 
     <!--웹페이지 로고-->
-    <link rel="shortcut icon" href="../img/titleLogo.png" />
+    <link rel="shortcut icon" href="../logo/titleLogo.png" />
   </head>
   <body>
     <div id="header">
@@ -47,13 +47,10 @@
     </div>
 
     <div id="logo">
-      <img
-        src="https://app-storage-edge-003.cafe24.com/bannermanage2/hot1000/2022/07/18/fc7318f524f49219fd84f4cc1cbe5607.png"
-        class="logoimg"
-      />
+      <img src="../logo/coolTenLogo.png" class="logoimg" />
       <div class="search">
         <input type="text" style="height: 20px" />
-        <img src="mainImage/searchImg.PNG" class="searchImg" />
+        <img src="../mainImage/searchImg.PNG" class="searchImg" />
         <div class="searchImg"></div>
       </div>
     </div>
