--- a/orderList/orderList.html
+++ b/orderList/orderList.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="./orderListPeriod.css" />
     <link rel="stylesheet" href="./orderListInfo.css" />
     <link rel="stylesheet" href="./orderListPageHistory.css" />
+
     <link rel="stylesheet" href="../mainheader.css" />
+    <link rel="stylesheet" href="../mainInfo.css" />
+    <link rel="stylesheet" href="../mainFloat.css" />
 
     <!--폰트-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,17 +32,17 @@
     <div id="header">
       <div class="mainBar">
         <div class="leftMainBar">
-          <div><a href=""> 로그인 </a></div>
-          <div><a href=""> 회원가입 </a></div>
-          <div><a href=""> 장바구니 </a></div>
-          <div><a href=""> 주문조회 </a></div>
+          <div><a href="login.html"> 로그인 </a></div>
+          <div><a href="join.html"> 회원가입 </a></div>
+          <div><a href="basket.html"> 장바구니 </a></div>
+          <div><a href="orderList.html"> 주문조회 </a></div>
           <div><a href=""> 마이페이지 </a></div>
           <div><a href=""> 즐겨찾기 </a></div>
         </div>
 
         <div class="rightMainBar">
           <div><a href=""> NOTICE </a></div>
-          <div><a href=""> Q & A </a></div>
+          <div><a href="q&a.html"> Q & A </a></div>
           <div><a href=""> REVIEW </a></div>
           <div><a href=""> MODEL </a></div>
         </div>
@@ -47,30 +50,124 @@
     </div>
 
     <div id="logo">
-      <img src="../logo/coolTenLogo.png" class="logoimg" />
+      <a href="../main.html">
+        <img src="../logo/coolTenLogo.png" class="logoimg" />
+      </a>
+
       <div class="search">
         <input type="text" style="height: 20px" />
         <img src="../mainImage/searchImg.PNG" class="searchImg" />
         <div class="searchImg"></div>
       </div>
     </div>
+
     <div id="menuBar">
       <div class="innerBox">
-        <div><a href=""> ?? </a></div>
+        <div class="all">
+          <a href=""> ALL </a>
+          <div class="all-content">
+            <div class="warrap">
+              <div class="topMenu">TOP</div>
+              <div class="topMenu">BOTTOM</div>
+              <div class="topMenu">OUTER</div>
+              <div class="topMenu">TOP</div>
+              <div class="topMenu">ACC</div>
+            </div>
+            <div class="warrap">
+              <div class="down">
+                <a href="#">티셔츠</a>
+                <a href="#">반팔티</a>
+                <a href="#">블라우스/남방</a>
+              </div>
+              <div class="down">
+                <a href="#">긴바지</a>
+                <a href="#">반바지</a>
+                <a href="#">치마</a>
+                <a href="#">레깅스</a>
+                <a href="#">멜빵</a>
+              </div>
+              <div class="down">
+                <a href="#">가디건</a>
+                <a href="#">점퍼/야상</a>
+                <a href="#">자켓/코트</a>
+              </div>
+              <div class="down">
+                <a href="#">치마</a>
+                <a href="#">원피스</a>
+              </div>
+              <div class="down">
+                <a href="#">모자</a>
+                <a href="#">양말</a>
+              </div>
+            </div>
+            <div class="warrap">
+              <div class="topMenu">SALE</div>
+              <div class="topMenu">BEST 50</div>
+              <div class="topMenu">CUMMUNITY</div>
+              <div class="topMenu">WHIT US</div>
+            </div>
+            <div class="warrap2">
+              <div class="down">
+                <a href="#">NOTICE</a>
+                <a href="#">Q & A</a>
+                <a href="#">REVIEW</a>
+                <a href="#">MODEL</a>
+              </div>
+              <div class="down">
+                <a href="#">COMPANY</a>
+                <a href="#">AGREEMENT</a>
+                <a href="#">PRAIVACY POLICY</a>
+                <a href="#">GUIDE</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="top">
-          <a href=""> TOP </a>
+          <a class="select" href=""> TOP</a>
           <div class="top-content">
             <a href="#">티셔츠</a>
             <a href="#">반팔티</a>
             <a href="#">블라우스/남방</a>
           </div>
         </div>
-        <div><a href=""> BOTTOM </a></div>
-        <div><a href=""> OUTER </a></div>
-        <div><a href=""> SKIRT/OPS </a></div>
-        <div><a href=""> ACC </a></div>
-        <div><a href=""> SALE </a></div>
-        <div><a href=""> BEST 50 </a></div>
+        <div class="bottom">
+          <a class="select" href=""> BOTTOM</a>
+          <div class="bottom-content">
+            <a href="#">긴바지</a>
+            <a href="#">반바지</a>
+            <a href="#">치마</a>
+            <a href="#">레깅스</a>
+            <a href="#">멜빵</a>
+          </div>
+        </div>
+
+        <div class="outer">
+          <a class="select" href=""> OUTER</a>
+          <div class="outer-content">
+            <a href="#">가디건</a>
+            <a href="#">점퍼/야상</a>
+            <a href="#">자켓/코트</a>
+          </div>
+        </div>
+
+        <div class="skirt">
+          <a class="select" href=""> SKIRT/OPS</a>
+          <div class="skirt-content">
+            <a href="#">치마</a>
+            <a href="#">원피스</a>
+          </div>
+        </div>
+
+        <div class="acc">
+          <a class="select" href=""> ACC</a>
+          <div class="acc-content">
+            <a href="#">모자</a>
+            <a href="#">양말</a>
+          </div>
+        </div>
+        <div class="sale"><a class="select" href=""> SALE</a></div>
+        <div class="best50"><a class="select" href=""> BEST 50</a></div>
       </div>
     </div>
 
@@ -236,6 +333,64 @@
         </div>
       </div>
     </div>
+
+    <div id="infoBox">
+      <div class="infoContainer">
+        <div class="text1">
+          핫텐 <br />COPYRIGHT © 핫텐 ALL RIGHTS RESERVED.<br />
+          TEL070-8111-0841 <br />평일 오후 1:00 ~ 오후 6:00 / 토.일.공휴일 휴무
+          <br />
+          COMPANY주식회사 핫텐OWNER신수정 <br />
+          ADDRESS01351 서울특별시 도봉구 방학동 654-21 2층 핫텐 <br />
+          MASTER신수정E-MAILhot_10@naver.com <br />
+          BUSINESS LICENSE702-87-01464 <br />
+          MALL-ORDER LICENSE2019-서울도봉-0660호 <br />
+          HOSTING By CAFE24|DESIGNED By DFLOOR
+        </div>
+        <div class="text2">
+          ACCOUNT INFO<br /><br />
+          농협 301-0256-5887-61<br />
+          예금주 : 주식회사 핫텐
+        </div>
+        <div class="text3">
+          WITH US<br /><br />
+          COMPANY<br />
+          AGREEMENT<br />
+          PRIVACY POLICY<br />
+          GUIDE<br /><br />
+          SOCIAL NETWORK
+        </div>
+        <div class="text4">
+          RETURN / EXCHANGE<br /><br />
+          132010 서울특별시 도봉구 도봉동 cj대한통운 강북지점 도봉1팀 '핫텐'<br />
+          (CJ대한통운택배 가상주소로 CJ택배로만 반품가능함)<br />
+          자세한 교환·반품절차 안내는 문의란 및 공지사항을 참고해주세요
+        </div>
+      </div>
+    </div>
+
+    <div id="floatArea">
+      <table>
+        <tr>
+          <td><img src="../mainImage/floatSearch.PNG" /></td>
+        </tr>
+        <tr>
+          <td class="needLine"><img src="../mainImage/floatShip.PNG" /></td>
+        </tr>
+        <tr>
+          <td class="needLine"><img src="../mainImage/floatCart.PNG" /></td>
+        </tr>
+        <tr>
+          <td class="needLine"><img src="../mainImage/floatSee.PNG" /></td>
+        </tr>
+        <tr>
+          <td><img src="../mainImage/floatUp.PNG" /></td>
+        </tr>
+        <tr>
+          <td><img src="../mainImage/floatDown.PNG" /></td>
+        </tr>
+      </table>
+    </div>
   </body>
   <script>
     //오늘 날짜 = 선택할 수 있는 마지막 날짜
@@ -246,4 +401,8 @@
       .toISOString()
       .substring(0, 10);
   </script>
+  <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+  <script src="../main.js"></script>
+  <script src="../mainImg.js"></script>
+  <script src="../mainHidden.js"></script>
 </html>
